Fix vertical layout: constrain fretboard width to fit-content instead of full horizontal space

--- a/src/components/Fretboard.css
+++ b/src/components/Fretboard.css
@@ -203,6 +203,11 @@
 }
 
 /* Vertical orientation */
+.fretboard.vertical {
+  width: fit-content;
+  max-width: 100%;
+}
+
 .fretboard.vertical .fretboard-grid {
   flex-direction: row;
 }
