--- a/src/components/Fretboard.css
+++ b/src/components/Fretboard.css
@@ -48,7 +48,7 @@
   height: 100%;
   border-right: 4px solid #8B4513;
   background: rgba(255, 255, 255, 0.05);
-  padding: 4px 2px;
+  padding: 2px;
 }
 
 .fret-cell:first-child {
